--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -22,10 +22,15 @@ smallvec = { workspace = true }
 
 [features]
 default = ["std", "png"]
-simd = ["vello_api/simd"]
+# Enable using SIMD instructions for rendering
+simd = []
+# Enable a simple version of SVG drawing. This is likely to be removed.
 pico_svg = ["dep:roxmltree"]
+# Get floating point functions from the standard library (likely using your target’s libc).
 std = ["peniko/std"]
+# Use floating point implementations from libm.v
 libm = ["peniko/libm"]
+# Allow loading and saving Pixmap to PNG. 
 png = ["std", "dep:png"]
 
 [lints]
