Get rid of Vello API (#1002)
See primarily [#vello > Clearing out Vello
API](https://xi.zulipchat.com/#narrow/channel/197075-vello/topic/Clearing.20out.20Vello.20API/with/517105581).
Its purpose was never all that clear, and so publishing it is likely to
lead to an incoherent story in the future.

--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -12,16 +12,26 @@ repository.workspace = true
 publish = false
 
 [dependencies]
-vello_api = { workspace = true, default-features = true }
 bytemuck = { workspace = true, features = [] }
+peniko = { workspace = true, features = ["bytemuck"] }
+png = { workspace = true, optional = true }
+roxmltree = { version = "0.20.0", optional = true }
 skrifa = { workspace = true }
 smallvec = { workspace = true }
-roxmltree = { version = "0.20.0", optional = true }
+
 
 [features]
-simd = ["vello_api/simd"]
-png = ["vello_api/png"]
+default = ["std", "png"]
+# Enable using SIMD instructions for rendering
+simd = []
+# Enable a simple version of SVG drawing. This is likely to be removed.
 pico_svg = ["dep:roxmltree"]
+# Get floating point functions from the standard library (likely using your target’s libc).
+std = ["peniko/std"]
+# Use floating point implementations from libm.v
+libm = ["peniko/libm"]
+# Allow loading and saving Pixmap to PNG. 
+png = ["std", "dep:png"]
 
 [lints]
 workspace = true
