Document the cargo features for Vello `{CPU, Common}`

--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -32,7 +32,7 @@ default = ["std", "png"]
 simd = []
 # Get floating point functions from the standard library (likely using your target’s libc).
 std = ["peniko/std"]
-# Use floating point implementations from libm.v
+# Use floating point implementations from libm.
 libm = ["peniko/libm"]
 # Allow loading and saving Pixmap to PNG. 
 png = ["std", "dep:png"]
