--- a/vello/Cargo.toml
+++ b/vello/Cargo.toml
@@ -44,7 +44,7 @@ workspace = true
 vello_encoding = { workspace = true }
 vello_shaders = { workspace = true, optional = true }
 bytemuck = { workspace = true }
-skrifa = { workspace = true }
+skrifa = { workspace = true, features = ["std"] }
 peniko = { workspace = true, default-features = true }
 wgpu = { workspace = true, optional = true }
 log = { workspace = true }
