--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -34,7 +34,7 @@ simd = []
 std = ["peniko/std", "skrifa/std"]
 # Use floating point implementations from libm.
 libm = ["peniko/libm", "skrifa/libm", "dep:libm"]
-# Allow loading and saving Pixmap to PNG. 
+# Allow loading Pixmap from PNG, and drawing png glyphs.
 png = ["std", "dep:png"]
 
 # Development only features
