--- a/sparse_strips/vello_cpu/Cargo.toml
+++ b/sparse_strips/vello_cpu/Cargo.toml
@@ -20,9 +20,15 @@ targets = []
 
 [dependencies]
 vello_common = { workspace = true }
+libm = { version = "0.2.15", optional = true }
 
 [features]
-default = ["png"]
+default = ["std", "png"]
+# Get floating point functions from the standard library (likely using your target’s libc).
+std = ["vello_common/std"]
+# Use floating point implementations from libm.
+libm = ["vello_common/libm", "dep:libm"]
+# Allow loading Pixmap from PNG, and drawing png glyphs.
 png = ["vello_common/png"]
 
 [lints]
