Fix Vello Hybrid dep

--- a/sparse_strips/vello_hybrid/Cargo.toml
+++ b/sparse_strips/vello_hybrid/Cargo.toml
@@ -17,7 +17,7 @@ workspace = true
 [dependencies]
 bytemuck = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
-vello_common = { workspace = true }
+vello_common = { workspace = true, features = ["std"] }
 wgpu = { workspace = true }
 
 [dev-dependencies]
