--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -24,17 +24,17 @@ png = { workspace = true, optional = true }
 roxmltree = { version = "0.20.0", optional = true }
 skrifa = { workspace = true }
 smallvec = { workspace = true }
-
+libm = { version = "0.2.15", optional = true }
 
 [features]
 default = ["std", "png"]
 # Enable using SIMD instructions for rendering
 simd = []
 # Get floating point functions from the standard library (likely using your target’s libc).
-std = ["peniko/std"]
+std = ["peniko/std", "skrifa/std"]
 # Use floating point implementations from libm.
-libm = ["peniko/libm"]
-# Allow loading and saving Pixmap to PNG. 
+libm = ["peniko/libm", "skrifa/libm", "dep:libm"]
+# Allow loading Pixmap from PNG, and drawing png glyphs.
 png = ["std", "dep:png"]
 
 # Development only features
