--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,7 +110,7 @@ png = "0.17.16"
 
 # The below crates are experimental!
 vello_api = { path = "sparse_strips/vello_api", default-features = false }
-vello_common = { path = "sparse_strips/vello_common", default-features = false }
+vello_common = { version = "0.0.1", path = "sparse_strips/vello_common", default-features = false }
 vello_cpu = { path = "sparse_strips/vello_cpu" }
 vello_hybrid = { path = "sparse_strips/vello_hybrid" }
 vello_hybrid_scenes = { path = "sparse_strips/vello_hybrid/examples/scenes" }
