--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vello_common"
-# When updating, also version update in workspace dependency in root Cargo.toml
+# When updating, also update the version in the workspace dependency in the root Cargo.toml
 version = "0.0.1"
 description = "Core data structures and utilities shared across the Vello rendering, including geometry processing and tiling logic."
 categories = ["rendering", "graphics"]
