--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "vello_common"
-version.workspace = true
+# When updating, also update the version in the workspace dependency in the root Cargo.toml
+version = "0.0.1"
 description = "Core data structures and utilities shared across the Vello rendering, including geometry processing and tiling logic."
 categories = ["rendering", "graphics"]
 keywords = ["2d", "vector-graphics"]
@@ -8,8 +9,6 @@ edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 repository.workspace = true
-# Prevent accidental publishing until the initial release
-publish = false
 
 [package.metadata.docs.rs]
 all-features = true
