--- a/sparse_strips/vello_cpu/Cargo.toml
+++ b/sparse_strips/vello_cpu/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "vello_cpu"
 # When moving past 0.0.x, also update caveats in the README
-version.workspace = true
+version = "0.0.1"
 description = "A CPU-based renderer for Vello, optimized for SIMD and multithreaded execution."
 categories = ["rendering", "graphics"]
 keywords = ["2d", "vector-graphics"]
@@ -9,8 +9,6 @@ edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 repository.workspace = true
-# Prevent accidental publishing until the initial release
-publish = false
 
 [package.metadata.docs.rs]
 all-features = true
@@ -19,8 +17,8 @@ default-target = "x86_64-unknown-linux-gnu"
 targets = []
 
 [dependencies]
-vello_common = { workspace = true }
 libm = { version = "0.2.15", optional = true }
+vello_common = { workspace = true }
 
 [features]
 default = ["std", "png"]
