--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "sparse_strips/vello_common",
     "sparse_strips/vello_cpu",
     "sparse_strips/vello_hybrid",
+    "sparse_strips/vello_hybrid_shaders",
     "sparse_strips/vello_hybrid/examples/scenes",
     "sparse_strips/vello_hybrid/examples/webgl",
     "sparse_strips/vello_hybrid/examples/winit",
@@ -113,6 +114,7 @@ vello_api = { path = "sparse_strips/vello_api", default-features = false }
 vello_common = { version = "0.0.1", path = "sparse_strips/vello_common", default-features = false }
 vello_cpu = { path = "sparse_strips/vello_cpu" }
 vello_hybrid = { path = "sparse_strips/vello_hybrid" }
+vello_hybrid_shaders = { path = "sparse_strips/vello_hybrid_shaders" }
 vello_hybrid_scenes = { path = "sparse_strips/vello_hybrid/examples/scenes" }
 vello_dev_macros = { path = "sparse_strips/vello_dev_macros" }
 
