--- a/sparse_strips/vello_hybrid/Cargo.toml
+++ b/sparse_strips/vello_hybrid/Cargo.toml
@@ -19,7 +19,7 @@ bytemuck = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
 vello_common = { workspace = true, features = ["std"] }
 wgpu = { workspace = true, optional = true }
-vello_hybrid_shaders = { workspace = true, optional = true }
+vello_sparse_shaders = { workspace = true, optional = true }
 
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
@@ -49,4 +49,4 @@ roxmltree = "0.20.0"
 [features]
 default = ["wgpu"]
 wgpu = ["dep:wgpu"]
-webgl = ["dep:js-sys", "dep:web-sys", "dep:vello_hybrid_shaders"]
+webgl = ["dep:js-sys", "dep:web-sys", "dep:vello_sparse_shaders"]
