--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -429,7 +429,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: install nightly toolchain
-        uses: dtolnay/rust-toolchain@nightly
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly-2025-05-16 # https://github.com/rust-lang/rust/issues/137578
 
       - name: restore cache
         uses: Swatinem/rust-cache@v2
