--- a/sparse_strips/vello_hybrid/Cargo.toml
+++ b/sparse_strips/vello_hybrid/Cargo.toml
@@ -20,6 +20,7 @@ thiserror = { workspace = true }
 vello_common = { workspace = true, features = ["std"] }
 wgpu = { workspace = true, optional = true }
 vello_sparse_shaders = { workspace = true, optional = true }
+log = { workspace = true }
 
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
