vello_hybrid: add native WebGL backend (#1011)
### Context

This PR follows the conversation had about
https://github.com/linebender/vello/pull/947 . I made this PR separately
as it also incorporates the clipping changes
https://github.com/linebender/vello/pull/957 .

In short, this PR adds a native WebGL backend when targeting `wasm32`
and if using the `"webgl"` feature on `vello_hybrid`.
The **primary motivation** of using a custom webgl renderer is binary
size, allowing 3mb to be removed when targeting WebGL2 natively. This is
achieved by omitting `wgpu` from the binary when the architecture is
`wasm32` and the `"webgl"` feature flag is set on `vello_hybrid`.

### Changes

#### vello_hybrid examples

- The `webgl` example has been renamed to `wgpu_webgl`. Now it's more
clear that it leverages `wgpu`'s WebGL backend.
- A `native_webgl` example has been added which uses the new WebGL
renderer backend.
- `ci.yml` tests both the `wgpu_webgl` example and the `native_webgl`
example - smoke testing both webgl techniques.
- A new `ClipScene` has been added for manually viewing and testing
deeply nested clipping.
([file](https://github.com/linebender/vello/pull/1011/files#diff-ef57b226886dac928b079c4743d6ed1c86ced27637edca1b60c496c95f03479b))

The PR can be manually tested by locally pulling the branch and running
the two examples:

- `cargo run_wasm -p wgpu_webgl --release`: Test original example
- `cargo run_wasm -p native_webgl --release`: Test new backend


#### New `vello_sparse_shaders` package added

This new package contains the WGSL shaders as a source of truth.
`vello_hybrid` optionally depends on this library which triggers a build
step generating a compiled module. The module contains GLSL shader
source code, as well as mappings from the WGSL identifiers to the
naga-mangled identifiers in the GLSL.

<details><summary>The generated code:</summary>

```rs
// Generated code by `vello_sparse_shaders` - DO NOT EDIT
/// Build time GLSL shaders derived from wgsl shad

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,10 @@ members = [
     "sparse_strips/vello_common",
     "sparse_strips/vello_cpu",
     "sparse_strips/vello_hybrid",
+    "sparse_strips/vello_sparse_shaders",
+    "sparse_strips/vello_hybrid/examples/native_webgl",
     "sparse_strips/vello_hybrid/examples/scenes",
-    "sparse_strips/vello_hybrid/examples/webgl",
+    "sparse_strips/vello_hybrid/examples/wgpu_webgl",
     "sparse_strips/vello_hybrid/examples/winit",
     "sparse_strips/vello_toy",
     "sparse_strips/vello_dev_macros",
@@ -113,6 +115,7 @@ vello_api = { path = "sparse_strips/vello_api", default-features = false }
 vello_common = { version = "0.0.1", path = "sparse_strips/vello_common", default-features = false }
 vello_cpu = { path = "sparse_strips/vello_cpu" }
 vello_hybrid = { path = "sparse_strips/vello_hybrid" }
+vello_sparse_shaders = { path = "sparse_strips/vello_sparse_shaders" }
 vello_hybrid_scenes = { path = "sparse_strips/vello_hybrid/examples/scenes" }
 vello_dev_macros = { path = "sparse_strips/vello_dev_macros" }
 
