Fix log being added as an accidental feature

--- a/vello_shaders/Cargo.toml
+++ b/vello_shaders/Cargo.toml
@@ -17,7 +17,7 @@ targets = []
 
 [features]
 default = ["wgsl", "cpu"]
-compile = ["dep:naga", "dep:thiserror", "log"]
+compile = ["dep:naga", "dep:thiserror", "dep:log"]
 
 # Target shading language variants of the vello shaders to link into the library.
 wgsl = []
