--- a/sparse_strips/vello_sparse_tests/Cargo.toml
+++ b/sparse_strips/vello_sparse_tests/Cargo.toml
@@ -44,6 +44,9 @@ web-sys = { version = "0.3.77", features = [
 ] }
 wasm-bindgen = "0.2.100"
 
+[build-dependencies]
+quote = { workspace = true }
+
 [features]
 webgl = ["vello_hybrid/webgl"]
 
