--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -355,7 +355,7 @@ jobs:
         run: wasm-pack test --headless --chrome
         working-directory: sparse_strips/vello_hybrid/examples/native_webgl
 
-      - name: check vello_hybrid webgl backend passes vello_sparse_tests suite
+      - name: Run vello_sparse_tests on Chrome
         run: wasm-pack test --headless --chrome --features webgl
         working-directory: sparse_strips/vello_sparse_tests
 
