Add WebGL browser tests to `vello_sparse_tests` (#1020)
Note: This PR currently branches off
https://github.com/linebender/vello/pull/1021 as there is a lint error
on `main` and I wanted to ensure CI fully passed.

> [!TIP]
> This is ready to review and passes all tests in CI. 

### Context

This follows https://github.com/linebender/vello/pull/1011 and is the
testing portion. In order to ensure renderer parity and correctness,
I've forked the `vello_hybrid` tests to also include a `_hybrid_webgl`
variant that use: `#[wasm_bindgen_test::wasm_bindgen_test]` and run via
the browser.

<details>
<summary>
As a demo of this PR, I locally introduced a "fake error" that reflects
the image. After running `wasm-pack test --chrome --features webgl` from
the `vello_sparse_tests` directory, I got the following very long
webpage. (unfurl details section by clicking this text, and scroll to
bottom of test results)
</summary>

![127 0 0
1_8000_](https://github.com/user-attachments/assets/d9033ede-ecac-4602-b329-07ee5b54f465)

</details>

### Features

 - Add headless and headed browser testing of the webgl backend.
- Because the browser can't read from the file system easily, reference
images are inlined into the binary via the proc macro and provided to
the `check_refs` function.
- Existing `_hybrid` tests are unchanged. I've added a `_hybrid_webgl`
test.
- For ease of debugging the diff'd images are appended to the document
after tests have run. This makes it much easier to understand the
failure.
- Add `check vello_hybrid webgl backend passes vello_sparse_tests suite`
CI step that uses headless browser.

These tests could be fancier, but they do the job right now. Debugging a
failure isn't easy, however the diff can be manually retrieved and
compared by a human by spinning up a browser.

The goal of having webgl tests automatically match the vello_hybrid
tests is to keep the `wgpu` and `webgl` renderer backends in sync.

### Test plan

This PR changes no business logic and is t

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -306,9 +306,27 @@ jobs:
 
   test-stable-wasm:
     name: cargo test (wasm32)
+    needs: prime-lfs-cache
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        # We intentionally do not use lfs: true here, instead using the caching method to save LFS bandwidth.
+
+      - name: Restore lfs cache
+        id: lfs-cache
+        uses: actions/cache/restore@v4
+        with:
+          path: .git/lfs
+          # The files targeted with git lfs
+          key: vello-lfs-${{ needs.prime-lfs-cache.outputs.lfs-hash }}
+          enableCrossOsArchive: true
+  
+      - name: Checkout LFS files
+        # `git lfs checkout` requires that each individual glob is a separate command line argument.
+        # The string `''' '''` is how you write `' '` in GitHub's expression context (i.e. two quotes separated by a space)
+        # The quotes are to avoid the shell from evaluating the globs itself.
+        run: git lfs checkout '${{ join(fromJson(env.LFS_FILES), ''' ''') }}'
+        continue-on-error: true
 
       - name: install stable toolchain
         uses: dtolnay/rust-toolchain@master
@@ -336,6 +354,10 @@ jobs:
       - name: check vello_hybrid is native webgl compatible
         run: wasm-pack test --headless --chrome
         working-directory: sparse_strips/vello_hybrid/examples/native_webgl
+
+      - name: Run vello_sparse_tests on Chrome
+        run: wasm-pack test --headless --chrome --features webgl
+        working-directory: sparse_strips/vello_sparse_tests
 
 
   check-stable-android:
