override_image demo WIP
Signed-off-by: Nico Burns <nico@nicoburns.com>

--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -35,10 +35,12 @@ scenes = { workspace = true }
 anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 pollster = { workspace = true }
+wgpu = { workspace = true }
 wgpu-profiler = { workspace = true, optional = true }
 
 winit = { workspace = true }
 log = { workspace = true }
+bytemuck = { workspace = true }
 
 # We're still using env-logger, but we want to use tracing spans to allow using
 # tracing_android_trace
