--- a/sparse_strips/vello_hybrid/Cargo.toml
+++ b/sparse_strips/vello_hybrid/Cargo.toml
@@ -21,6 +21,7 @@ vello_common = { workspace = true, features = ["std"] }
 wgpu = { workspace = true, optional = true }
 vello_sparse_shaders = { workspace = true, optional = true }
 log = { workspace = true }
+guillotiere = "0.6.2"
 
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
