Document the `multithreading` features in `vello_cpu`

--- a/sparse_strips/vello_cpu/Cargo.toml
+++ b/sparse_strips/vello_cpu/Cargo.toml
@@ -31,6 +31,7 @@ std = ["vello_common/std"]
 libm = ["vello_common/libm", "dep:libm"]
 # Allow loading Pixmap from PNG, and drawing png glyphs.
 png = ["vello_common/png"]
+# Enable multi-threaded rendering (currently only a part of the pipeline can be parallelized).
 multithreading = ["std", "dep:rayon", "dep:thread_local"]
 
 [lints]
