--- a/sparse_strips/vello_cpu/Cargo.toml
+++ b/sparse_strips/vello_cpu/Cargo.toml
@@ -19,12 +19,14 @@ targets = []
 [dependencies]
 libm = { version = "0.2.15", optional = true }
 vello_common = { workspace = true }
+crossbeam-channel = {workspace = true, optional = true}
+ordered-channel = { workspace = true, optional = true, features = ["crossbeam-channel"]}
 rayon = { workspace = true, optional = true }
 thread_local = { workspace = true, optional = true }
 
 
 [features]
-default = ["std", "png"]
+default = ["std", "png", "multithreading"]
 # Get floating point functions from the standard library (likely using your target’s libc).
 std = ["vello_common/std"]
 # Use floating point implementations from libm.
@@ -32,7 +34,7 @@ libm = ["vello_common/libm", "dep:libm"]
 # Allow loading Pixmap from PNG, and drawing png glyphs.
 png = ["vello_common/png"]
 # Enable multi-threaded rendering.
-multithreading = ["std", "dep:rayon", "dep:thread_local"]
+multithreading = ["std", "dep:rayon", "dep:thread_local", "dep:ordered-channel", "dep:crossbeam-channel"]
 
 [lints]
 workspace = true
