--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,6 +111,8 @@ oxipng = { version = "9.1.5", default-features = false }
 png = "0.17.16"
 rayon = { version = "1.10.0" }
 thread_local = "1.1.8"
+crossbeam-channel = "0.5.15"
+ordered-channel = {  version = "1.2.0", features = ["crossbeam-channel"] }
 
 # The below crates are experimental!
 vello_api = { path = "sparse_strips/vello_api", default-features = false }
