--- a/Cargo.toml
+++ b/Cargo.toml
@@ -113,6 +113,7 @@ rayon = { version = "1.10.0" }
 thread_local = "1.1.8"
 crossbeam-channel = "0.5.15"
 ordered-channel = { version = "1.2.0", features = ["crossbeam-channel"] }
+fearless_simd = { path = "../fearless_simd/fearless_simd" }
 
 # The below crates are experimental!
 vello_api = { path = "sparse_strips/vello_api", default-features = false }
