Feature-gate multithreading in vello_common

--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -35,6 +35,8 @@ std = ["peniko/std", "skrifa/std"]
 libm = ["peniko/libm", "skrifa/libm", "dep:libm"]
 # Allow loading Pixmap from PNG, and drawing png glyphs.
 png = ["std", "dep:png"]
+# Enable multi-threaded rendering.
+multithreading = []
 
 # Development only features
 
