--- a/sparse_strips/vello_cpu/Cargo.toml
+++ b/sparse_strips/vello_cpu/Cargo.toml
@@ -26,7 +26,7 @@ thread_local = { workspace = true, optional = true }
 
 
 [features]
-default = ["std", "png", "multithreading"]
+default = ["std", "png"]
 # Get floating point functions from the standard library (likely using your target’s libc).
 std = ["vello_common/std"]
 # Use floating point implementations from libm.
@@ -40,6 +40,7 @@ multithreading = [
     "dep:thread_local",
     "dep:ordered-channel",
     "dep:crossbeam-channel",
+    "vello_common/multithreading"
 ]
 
 [lints]
