--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["testing", "graphics"]
 [dependencies]
 kompari = { git = "https://github.com/linebender/kompari.git", rev = "4b851413e1b17307064aa48c50e59d7e29656543" }
 kompari-tasks = { git = "https://github.com/linebender/kompari.git", rev = "4b851413e1b17307064aa48c50e59d7e29656543" }
-clap = { version = "4", features = ["derive"] }
+clap = { workspace = true, features = ["derive"] }
 
 [lints]
 workspace = true
