--- a/sparse_strips/vello_toy/Cargo.toml
+++ b/sparse_strips/vello_toy/Cargo.toml
@@ -13,7 +13,7 @@ publish = false
 svg = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 # TODO: Should vello_toy be `no_std`?
-vello_common = { workspace = true, features = ["std"] }
+vello_common = { workspace = true, features = ["std", "multithreading"] }
 
 [[bin]]
 name = "debug"
