--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -31,9 +31,9 @@ default = ["std", "png"]
 # Enable using SIMD instructions for rendering
 simd = []
 # Get floating point functions from the standard library (likely using your target’s libc).
-std = ["peniko/std", "skrifa/std"]
+std = ["peniko/std", "skrifa/std", "fearless_simd/std"]
 # Use floating point implementations from libm.
-libm = ["peniko/libm", "skrifa/libm", "dep:libm"]
+libm = ["peniko/libm", "skrifa/libm", "dep:libm", "fearless_simd/libm"]
 # Allow loading Pixmap from PNG, and drawing png glyphs.
 png = ["std", "dep:png"]
 # Enable multi-threaded rendering.
