--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -39,7 +39,7 @@ png = ["std", "dep:png"]
 # Enable multi-threaded rendering.
 multithreading = []
 # Add support for text rendering
-text = ["skrifa"]
+text = ["dep:skrifa"]
 
 # Development only features
 
