Make glyph rendering an optional feature (#1060)
Unfortunately I'm stuck because just enabling the "std" feature will
also enable the "skrifa/std" feature, and because of this skrifa will be
pulled in as a dependency even though the text feature is disabled. I'm
not sure how to best solve this without adding two
`skrifa-std`/`skrifa-libm` features that need to be enabled manually by
the user. Suggestions are welcome.

The main motivation is that it would allow using the renderer in
contexts where text rendering is already implemented with a different
method, without having to pull in skrifa as a dependency (e.g. resvg).

--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -22,22 +22,24 @@ peniko = { workspace = true, features = ["bytemuck"] }
 fearless_simd = { workspace = true }
 png = { workspace = true, optional = true }
 roxmltree = { version = "0.20.0", optional = true }
-skrifa = { workspace = true }
+skrifa = { workspace = true, optional = true }
 smallvec = { workspace = true }
 libm = { version = "0.2.15", optional = true }
 
 [features]
-default = ["std", "png"]
+default = ["std", "png", "text"]
 # Enable using SIMD instructions for rendering
 simd = []
 # Get floating point functions from the standard library (likely using your target’s libc).
-std = ["peniko/std", "skrifa/std", "fearless_simd/std"]
+std = ["peniko/std", "skrifa?/std", "fearless_simd/std"]
 # Use floating point implementations from libm.
-libm = ["peniko/libm", "skrifa/libm", "dep:libm", "fearless_simd/libm"]
+libm = ["peniko/libm", "skrifa?/libm", "dep:libm", "fearless_simd/libm"]
 # Allow loading Pixmap from PNG, and drawing png glyphs.
 png = ["std", "dep:png"]
 # Enable multi-threaded rendering.
 multithreading = []
+# Add support for text rendering
+text = ["dep:skrifa"]
 
 # Development only features
 
