--- a/sparse_strips/vello_hybrid/examples/scenes/Cargo.toml
+++ b/sparse_strips/vello_hybrid/examples/scenes/Cargo.toml
@@ -12,10 +12,12 @@ workspace = true
 [dependencies]
 bytemuck = { workspace = true, features = [] }
 vello_hybrid = { workspace = true }
-vello_common = { workspace = true, features = ["pico_svg"] }
+vello_common = { workspace = true, features = ["pico_svg", "png"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 parley = { version = "0.4.0", default-features = false, features = ["std"] }
+image = { workspace = true, features = ["jpeg"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 parley = { version = "0.4.0", default-features = true }
+image = { workspace = true, features = ["jpeg"] }
