--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -356,11 +356,11 @@ jobs:
         working-directory: sparse_strips/vello_hybrid/examples/native_webgl
 
       - name: Run vello_sparse_tests on Chrome
-        run: wasm-pack test --headless --chrome --features webgl
+        run: wasm-pack test --headless --chrome --features webgl --release
         working-directory: sparse_strips/vello_sparse_tests
 
       - name: Run vello_sparse_tests (+simd128) on Chrome
-        run: RUSTFLAGS=-Ctarget-feature=+simd128 wasm-pack test --headless --chrome --features webgl
+        run: RUSTFLAGS=-Ctarget-feature=+simd128 wasm-pack test --headless --chrome --features webgl --release
         working-directory: sparse_strips/vello_sparse_tests
 
 
