--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -17,7 +17,6 @@ default-target = "x86_64-unknown-linux-gnu"
 targets = []
 
 [dependencies]
-once_cell = { workspace = true, optional = true }
 bytemuck = { workspace = true, features = [] }
 peniko = { workspace = true, features = ["bytemuck"] }
 fearless_simd = { workspace = true }
@@ -38,7 +37,7 @@ libm = ["peniko/libm", "skrifa?/libm", "dep:libm", "fearless_simd/libm"]
 # Allow loading Pixmap from PNG, and drawing png glyphs.
 png = ["std", "dep:png"]
 # Enable multi-threaded rendering.
-multithreading = ["dep:once_cell"]
+multithreading = []
 # Add support for text rendering
 text = ["dep:skrifa"]
 
