--- a/sparse_strips/vello_toy/Cargo.toml
+++ b/sparse_strips/vello_toy/Cargo.toml
@@ -14,6 +14,7 @@ svg = { workspace = true }
 usvg = { workspace = true }
 bytemuck = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
+vello_common = { workspace = true }
 vello_cpu = { workspace = true, features = ["multithreading"] }
 image = { workspace = true, features = ["png"] }
 
