add debug assertion to prevent vello_hybrid render failure

--- a/sparse_strips/vello_hybrid/Cargo.toml
+++ b/sparse_strips/vello_hybrid/Cargo.toml
@@ -29,6 +29,7 @@ js-sys = { version = "0.3.77", optional = true }
 web-sys = { version = "0.3.77", features = [
     "HtmlCanvasElement",
     "WebGl2RenderingContext",
+    "WebGlContextAttributes",
     "WebGlProgram",
     "WebGlUniformLocation",
     "WebGlBuffer",
