--- a/sparse_strips/vello_cpu/Cargo.toml
+++ b/sparse_strips/vello_cpu/Cargo.toml
@@ -18,6 +18,7 @@ targets = []
 
 [dependencies]
 bytemuck = { workspace = true }
+smallvec = { workspace = true }
 vello_common = { workspace = true }
 crossbeam-channel = { workspace = true, optional = true }
 ordered-channel = { workspace = true, optional = true, features = ["crossbeam-channel"] }
