--- a/Cargo.toml
+++ b/Cargo.toml
@@ -151,4 +151,4 @@ syn = { version = "2.0.101", features = ["full", "extra-traits"] }
 quote = "1.0.40"
 
 [patch.crates-io]
-kurbo = { path = "../kurbo/kurbo" }
+kurbo = { git = "https://github.com/linebender/kurbo", rev = "a0512ab" }
