--- a/sparse_strips/vello_common/Cargo.toml
+++ b/sparse_strips/vello_common/Cargo.toml
@@ -42,8 +42,8 @@ png = ["std", "dep:png"]
 multithreading = ["std"]
 # Add support for text rendering
 text = ["dep:skrifa"]
-# Turn off some `vello_cpu` specific optimizations that vlelo_hybrid can't use.
-hybrid = []
+# Turn on `vello_cpu` specific optimizations that `vello_hybrid` can't use.
+cpu = []
 
 # Development only features
 
