--- a/sparse_strips/vello_cpu/Cargo.toml
+++ b/sparse_strips/vello_cpu/Cargo.toml
@@ -18,7 +18,7 @@ targets = []
 
 [dependencies]
 bytemuck = { workspace = true }
-vello_common = { workspace = true }
+vello_common = { workspace = true, features = ["cpu"] }
 crossbeam-channel = { workspace = true, optional = true }
 ordered-channel = { workspace = true, optional = true, features = ["crossbeam-channel"] }
 rayon = { workspace = true, optional = true }
