--- a/Cargo.toml
+++ b/Cargo.toml
@@ -149,3 +149,7 @@ once_cell = "1.21.3"
 proc-macro2 = "1.0.95"
 syn = { version = "2.0.101", features = ["full", "extra-traits"] }
 quote = "1.0.40"
+
+[profile.profiling]
+inherits = "release"
+debug = true
